<resources>
    <string name="app_name">LessonsList</string>
    <string name="title_home">Home</string>
    <string name="title_classes">Classes</string>
    <string name="title_somelist">Some List</string>
    <string name="title_fav">Favourites</string>
    <string name="are_you_ready_for_exams">Are you ready for exams?</string>
    <string name="zeros">00</string>
    <string name="dots">:</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="title_homeworks">Homeworks</string>
</resources>