<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_timer"
        app:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/color_green_gradient"
            android:orientation="vertical">

            <TextView
                android:id="@+id/are_you_ready"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/are_you_ready_for_exams"
                android:textSize="@dimen/text_middle"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:backgroundTint="@color/teal_200"
                    android:id="@+id/timer_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/timer_dots_1"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_timer_days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/zeros"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_middle" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/timer_dots_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/dots"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_middle"
                    app:layout_constraintEnd_toStartOf="@+id/timer_hours"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/timer_days"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:backgroundTint="@color/teal_200"
                    android:id="@+id/timer_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/timer_dots_2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/timer_dots_1">

                    <TextView
                        android:id="@+id/tv_timer_hours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:text="@string/zeros"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_middle" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/timer_dots_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/dots"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_middle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/timer_minutes"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@id/timer_hours" />

                <androidx.cardview.widget.CardView
                    android:backgroundTint="@color/teal_200"
                    android:id="@+id/timer_minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/timer_dots_2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:id="@+id/tv_timer_minutes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:text="@string/zeros"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_middle" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@+id/timer_days"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@+id/timer_days"
                    app:layout_constraintEnd_toEndOf="@+id/timer_days"
                    android:text="@string/days"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@+id/timer_hours"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@+id/timer_hours"
                    app:layout_constraintEnd_toEndOf="@+id/timer_hours"
                    android:text="@string/hours"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/minutes"
                    app:layout_constraintTop_toBottomOf="@+id/timer_minutes"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@+id/timer_minutes"
                    app:layout_constraintEnd_toEndOf="@+id/timer_minutes"
                    android:textSize="@dimen/text_small" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_classes"
        android:text="@string/title_classes"
        android:textSize="@dimen/text_middle"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_timer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_classes_today"
        tools:text="6 classes today"
        android:textSize="@dimen/text_small"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_timer" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/rv_classes_horizontal"
        app:layout_constraintTop_toBottomOf="@id/label_classes" />

</androidx.constraintlayout.widget.ConstraintLayout>